# iPlug2OOS

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  VOIDREADME.md  agent.py  agent_config.txt  agent_task_config.txt  bump_version.py  common-ios.xcconfig  common-mac.xcconfig  common-web.mk  common-win.ci.props  common-win.props  config.txt  duplicate.py  fonts.js  iPlug2OOS-common-mac.xcconfig  iPlug2OOS-common-win.props  index.html  init.sh  my-common-mac.xcconfig  my-common-win.props  restore.py  server.js  setup.sh  setup_container.sh  test-cmake-ios.sh  test-cmake-make.sh  test-cmake-msvc.py  test-cmake-ninja.sh  test-cmake-xcode.sh  undo_setup.sh
.devcontainer/: Dockerfile  devcontainer.json
TemplateProject/: CLAUDE.md  CMakeLists.txt  README.md  TemplateProject.cpp  TemplateProject.h  TemplateProject.sln  config.h
TemplateProject/app/: ContentView.swift  TemplateProjectApp.swift
TemplateProject/app/Common/: TypeAliases.swift
TemplateProject/app/Common/Audio/: SimplePlayEngine.swift
TemplateProject/app/Common/MIDI/: MIDIManager.swift
TemplateProject/app/Common/String/: StringHelpers.swift
TemplateProject/app/Common/UI/: ViewControllerRepresentable.swift
TemplateProject/app/Model/: AudioUnitHostModel.swift  AudioUnitViewModel.swift
TemplateProject/config/: TemplateProject-ios.xcconfig  TemplateProject-mac.xcconfig  TemplateProject-wasm.mk  TemplateProject-web.mk  TemplateProject-win.props
TemplateProject/installer/: TemplateProject.iss  changelog.txt  intro.md  license.md  readme-mac.md  readme-win-demo.md  readme-win.md
TemplateProject/manual/: TemplateProject manual.md
TemplateProject/projects/: TemplateProject-aax.vcxproj  TemplateProject-aax.vcxproj.filters  TemplateProject-app.vcxproj  TemplateProject-app.vcxproj.filters  TemplateProject-clap.vcxproj  TemplateProject-clap.vcxproj.filters  TemplateProject-vst2.vcxproj  TemplateProject-vst2.vcxproj.filters  TemplateProject-vst3.vcxproj  TemplateProject-vst3.vcxproj.filters  TemplateProject-wasm-dsp.mk  TemplateProject-wasm-ui.mk
TemplateProject/projects/TemplateProject-iOS.xcodeproj/: project.pbxproj
TemplateProject/projects/TemplateProject-iOS.xcodeproj/xcshareddata/xcschemes/: iOS-APP with AUv3.xcscheme  iOS-AUv3.xcscheme  iOS-AUv3Framework.xcscheme  iOS-Update plists.xcscheme
TemplateProject/projects/TemplateProject-macOS.xcodeproj/: project.pbxproj
TemplateProject/projects/TemplateProject-macOS.xcodeproj/xcshareddata/xcschemes/: All macOS.xcscheme  macOS-AAX.xcscheme  macOS-APP with AUv3.xcscheme  macOS-APP.xcscheme  macOS-AUv2.xcscheme  macOS-AUv3.xcscheme  macOS-AUv3Framework.xcscheme  macOS-CLAP.xcscheme  macOS-Update plists.xcscheme  macOS-VST2.xcscheme  macOS-VST3 (Distributed).xcscheme  macOS-VST3 Controller Library.xcscheme  macOS-VST3.xcscheme
TemplateProject/resources/: IPlugAUViewController.xib  IPlugAUViewController_vTemplateProject.xib  IPlugAUViewController_vTemplateProject_auv3.xib  TemplateProject-AAX-Info.plist  TemplateProject-AU-Info.plist  TemplateProject-CLAP-Info.plist  TemplateProject-VST2-Info.plist  TemplateProject-VST3-Info.plist  TemplateProject-iOS-AUv3-Info.plist  TemplateProject-iOS-Info.plist  TemplateProject-iOS-MainInterface.storyboard  TemplateProject-macOS-AUv3-Info.plist  TemplateProject-macOS-AUv3Framework-Info.plist  TemplateProject-macOS-Info.plist  TemplateProject-macOS-MainMenu.nib  TemplateProject-macOS-MainMenu.xib  TemplateProjectAU.h  main.rc
TemplateProject/resources/Images.xcassets/LaunchScreenBackGroundColor.colorset/: Contents.json
TemplateProject/resources/web/: index.html
TemplateProject/scripts/: cli_analyze.py  cli_animate.py  makedist-mac.sh  makedist-wasm.sh  makedist-web.sh  makedist-win.bat  makeinstaller-mac.sh  makezip-win.py  plot_impulse.py  postbuild-win.bat  prepare_installer_docs.py  prepare_resources-mac.py  update_installer-win.py  update_version-ios.py  update_version-mac.py
VisageTemplate/: CMakeLists.txt  README.md  VisageTemplate.RPP  VisageTemplate.cpp  VisageTemplate.h  VisageTemplate.sln  config.h
VisageTemplate/VisageTemplate.xcworkspace/: contents.xcworkspacedata
VisageTemplate/config/: VisageTemplate-ios.xcconfig  VisageTemplate-mac.xcconfig  VisageTemplate-web.mk  VisageTemplate-win.props
VisageTemplate/installer/: VisageTemplate.iss  changelog.txt  intro.rtf  known-issues.txt  license.rtf  readme-mac.rtf  readme-win-demo.rtf  readme-win.rtf
VisageTemplate/projects/: VisageTemplate-aax.vcxproj  VisageTemplate-aax.vcxproj.filters  VisageTemplate-app.vcxproj  VisageTemplate-app.vcxproj.filters  VisageTemplate-clap.vcxproj  VisageTemplate-clap.vcxproj.filters  VisageTemplate-macOS.entitlements  VisageTemplate-vst2.vcxproj  VisageTemplate-vst2.vcxproj.filters  VisageTemplate-vst3.vcxproj  VisageTemplate-vst3.vcxproj.filters  VisageTemplate-wam-controller.mk  VisageTemplate-wam-processor.mk
VisageTemplate/projects/VisageTemplate-iOS.xcodeproj/: project.pbxproj
VisageTemplate/projects/VisageTemplate-iOS.xcodeproj/xcshareddata/xcschemes/: iOS-APP with AUv3.xcscheme  iOS-AUv3.xcscheme  iOS-AUv3Framework.xcscheme  iOS-Update plists.xcscheme
VisageTemplate/projects/VisageTemplate-macOS.xcodeproj/: project.pbxproj
VisageTemplate/resources/: IPlugAUViewController_vVisageTemplate.xib  VisageTemplate-AAX-Info.plist  VisageTemplate-AU-Info.plist  VisageTemplate-CLAP-Info.plist  VisageTemplate-Pages.xml  VisageTemplate-VST2-Info.plist  VisageTemplate-VST3-Info.plist  VisageTemplate-iOS-AUv3-Info.plist  VisageTemplate-iOS-Info.plist  VisageTemplate-iOS-LaunchScreen.storyboard  VisageTemplate-iOS-MainInterface.storyboard  VisageTemplate-macOS-AUv3-Info.plist  VisageTemplate-macOS-AUv3Framework-Info.plist  VisageTemplate-macOS-Info.plist  VisageTemplate-macOS-MainMenu.xib  VisageTemplateAU.h  VisageTemplateAUv3Appex.m  main.rc  main.rc_mac_dlg
VisageTemplate/scripts/: makedist-mac.sh  makedist-web.sh  makedist-win.bat  makeinstaller-mac.sh  makezip-win.py  prepare_resources-mac.py  update_installer-win.py  update_version-ios.py  update_version-mac.py
(+147 files in other folders)
